013 - small refactoring